--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 <body>
     <div class="container">
         <div class="title">Sorting Algorithms</div>
-        <a class="sorting-algorithm" href="Bubble Sort/index.html">Bubble sort</a>
-        <a class="sorting-algorithm" href="Insertion Sort/index.html">Insertion sort</a>
-        <a class="sorting-algorithm" href="Selection Sort/index.html">Selection sort</a>
-        <a class="sorting-algorithm" href="Merge Sort/index.html">Merge sort</a>
+        <a class="sorting-algorithm" href="Bubble Sort\index.html">Bubble sort</a>
+        <a class="sorting-algorithm" href="Insertion Sort\index.html">Insertion sort</a>
+        <a class="sorting-algorithm" href="Selection Sort\index.html">Selection sort</a>
+        <a class="sorting-algorithm" href="Merge Sort\index.html">Merge sort</a>
     </div>
 </body>
 </html>
